sfdx-source/force-app/main/default/objects/Business_Vertical__c/Business_Vertical__c.object-meta.xml
<CustomObject>
    <description>LEM-11076: It is used to capture the Vertical, UI Type and Product as a singular Business Vertical Id.</description>
    <label>Business Vertical</label>
    <nameField>
        <label>Business Vertical</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Verticals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>