sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>LEM-11076: It indicates if the Business Vertical Record is Active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>