sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Business_Vertical_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical_ID__c</fullName>
    <description>LEM-11076: This field is to capture the unique vertical ID of the business vertical</description>
    <externalId>true</externalId>
    <label>Business Vertical ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>