sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-11076: This field is to capture the description of the vertical.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>