sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Menu_UI_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_UI_Type__c</fullName>
    <description>LEM-11076: This field is to capture the menu type of the vertical.</description>
    <label>Menu UI Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Menu_UI</valueSetName>
    </valueSet>
</CustomField>