sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <description>LEM-11076: This field is to capture the primary vertical value of this business vertical.</description>
    <label>Primary Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>