sfdx-source/force-app/main/default/objects/Business_Vertical__c/fields/Vertical_Name__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Name__c</fullName>
    <description>LEM-11076: This field is to capture the vertical name.</description>
    <label>Vertical Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>