sfdx-source/force-app/main/default/objects/Business_Vertical__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vertical_Name__c</columns>
    <columns>Business_Vertical_ID__c</columns>
    <columns>Primary_Vertical__c</columns>
    <columns>Menu_UI_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>